# MacTegraRCM

./: .gitignore  CMakeLists.txt  README.md
cmake/: FileEmbed.cmake  Findlibudev.cmake  Findlibusb1.cmake
dep/fuseec/: CMakeLists.txt
dep/fuseec/assets/: CMakeLists.txt
dep/fuseec/assets/intermezzo/: CMakeLists.txt  README
dep/fuseec/assets/usb_database/: CMakeLists.txt
dep/fuseec/src/: CMakeLists.txt  fs.c  fs.h  payload.c  payload.h  tegra.c  tegra.h  usb.c  usb.h  util.h
dep/fuseec/src/backend/: CMakeLists.txt  backend.h  libusb.c  linux.c
resources/app/: create_dmg.sh
resources/app/icon/: icon.icns
src/: frame.cpp  frame.h  fusee.cpp  fusee.h  main.cpp  resources.h
